# master-plan

./: .gitignore  master-plan.cabal  stack.yaml
app/: Main.hs
bench/: algebra-flatten.hs
examples/: example1.yaml
plan/: master.plan
src/MasterPlan/: Algebra.hs  Cli.hs  Input.hs  Parser.hs  Project.hs
src/MasterPlan/Cli/: Opts.hs  Run.hs
src/MasterPlan/Input/: Expression.hs  Json.hs  Types.hs  Yaml.hs
src/MasterPlan/Input/Yaml/: Expression.hs  Interpretation.hs  Struct.hs
src/MasterPlan/Internal/: Error.hs  Import.hs  TH.hs
src/MasterPlan/Output/: Diagrams.hs
src/MasterPlan/Project/: Calculate.hs  Graph.hs  Plan.hs  Struct.hs
src/MasterPlan/Project/Calculate/: Estimation.hs  Plan.hs  Variants.hs
test/MasterPlan/: AlgebraSpec.hs  Arbitrary.hs  DataSpec.hs  InputSpec.hs  ParserSpec.hs
test/MasterPlan/Project/: GraphSpec.hs
test/fixtures/: dotedProjects.yaml  onlyExpr.yaml  shorten.yaml  simple.yaml
