name:                master-plan
version:             0.3.1
synopsis:            The project management tool for hackers
description:         Master Plan is a tool that parses files that describes
                     projects using a simple and powerful syntax in which
                     project structures are encoded using a special algebra
                     with combinators for specifying the different kinds
                     of dependencies. It also supports estimations of cost and
                     risk, as well as some metadata. The tool is then able
                     to compute the priority of execution that minimizes costs,
                     and also output a nice visual representation of the structure.
                     Becase the plan description is plan text, it's portable
                     and fits well within source control.
homepage:            https://github.com/rodrigosetti/master-plan
bug-reports:         https://github.com/rodrigosetti/master-plan/issues
author:              Rodrigo Setti
maintainer:          rodrigosetti@gmail.com
stability:           alpha
license:             MIT
license-file:        LICENSE
copyright:           2017 Rodrigo Setti. All rights reserved
category:            Tools
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , CHANGELOG.md

source-repository head
  type:     git
  location: git://github.com/rodrigosetti/master-plan.git

executable master-plan
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  UnicodeSyntax
  build-depends:       base >= 4.5 && < 5
                     , master-plan
                     , optparse-applicative
                     , text

library
    hs-source-dirs:      src
    default-language:    Haskell2010
    ghc-options:         -Wall
    default-extensions:  DeriveFoldable
                       , DeriveFunctor
                       , DeriveGeneric
                       , DeriveTraversable
                       , FlexibleInstances
                       , FunctionalDependencies
                       , GeneralizedNewtypeDeriving
                       , LambdaCase
                       , MultiParamTypeClasses
                       , OverloadedStrings
                       , ScopedTypeVariables
                       , TemplateHaskell
                       , UnicodeSyntax
    build-depends:       base >= 4.5 && < 5
                       , aeson >= 1.1.0.0
                       , containers
                       , deepseq
                       , diagrams
                       , diagrams-lib
                       , diagrams-rasterific
                       , hashable
                       , inflections
                       , lens
                       , megaparsec >= 6.0.0
                       , mtl
                       , optparse-applicative
                       , scientific
                       , semigroups
                       , syb
                       , text
                       , unordered-containers
                       , vector
                       , yaml
    exposed-modules:     MasterPlan.Algebra
                       , MasterPlan.Cli
                       , MasterPlan.Cli.Opts
                       , MasterPlan.Cli.Run
                       , MasterPlan.Input.Yaml
                       , MasterPlan.Input.Yaml.Expression
                       , MasterPlan.Input.Yaml.Interpretation
                       , MasterPlan.Input.Yaml.Struct
                       , MasterPlan.Internal.Import
                       , MasterPlan.Internal.TH
                       , MasterPlan.Output.Diagrams
                       , MasterPlan.Project
                       , MasterPlan.Project.Calculate
                       , MasterPlan.Project.Graph
                       , MasterPlan.Project.Struct

test-suite spec
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-M2G
  default-language: Haskell2010
  default-extensions:  FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RankNTypes
                     , TemplateHaskell
                     , UnicodeSyntax
  build-depends:    base >= 4.5 && < 5
                  , HUnit
                  , QuickCheck
                  , containers
                  , generic-arbitrary
                  , hspec
                  , hspec-smallcheck
                  , lens
                  , master-plan
                  , megaparsec
                  , mtl
                  , quickcheck-instances
                  , random
                  , random-shuffle
                  , smallcheck
                  , text
                  , unordered-containers
  other-modules:  MasterPlan.AlgebraSpec
                , MasterPlan.InputSpec
                , MasterPlan.Project.GraphSpec

benchmark algebra-flatten
  type:       exitcode-stdio-1.0
  main-is:    algebra-flatten.hs
  hs-source-dirs: bench
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-M2G
  default-language: Haskell2010
  default-extensions: LambdaCase
  build-depends: base
               , criterion
               , master-plan
